--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-all:2.0.2-beta'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 
+    //mocks staticos
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+
 
 }
 
